# ffmpeg_learn

./: CMakeLists.txt  README.md  main.cpp
include/SDL/: SDL_stdinc.h
include/include/SDL/: SDL_audio.h
include/include/libavutil/: ffversion.h
include/libavformat/: avformat.h
libs/: readme.md
src/: 1_ffmpeg_file.hpp  2_extract_audio.hpp  3_extract_video.hpp  4_parser_h264.hpp  SDL_1_create_windows.hpp  SDL_2_create_rect.hpp  SDL_3_play_audio.hpp  SDL_4_play_video.hpp  common.hpp  record_audio.hpp  record_video.hpp  simple_avdevice.hpp
src/player/: player1.hpp  player2.hpp  queue.hpp
